test/end-to-end/compile-errors/variant-member-wrong-type-arg.crow
main void()
	info log match bar
	as foo
		x
	as bar
		"bar"
	else
		"other"

v[t] variant

foo record string v variant-member
bar record nat v variant-member
